pkg/cap/msg/errors/example/ue/gnerate.go
package ue

//go:generate cap -i18n gen
